--- a/css/style.css
+++ b/css/style.css
@@ -28,8 +28,72 @@ header form .form-control{
 /* thay doi vi tri kinh lup */
 header form i:nth-child(2) {
     position: absolute;
-    right: 129px;
-    top: 22px;
+    right: 113px;
+    top: 25px;
+}
+
+header form i:last-child {
+    position: absolute;
+    top: 14px;
+    right: -17px;
+}
+
+/* Tương lai tươi sáng */
+#myBody {
+    background-color: white;
+}
+
+#switchButton #sun {
+    display: none;
+}
+#switchButton #moon {
+    display: block;
+}
+
+/* Tương lai u tối */
+.dark#myBody {
+    background-color: #404040;
+}
+
+.dark #switchButton #sun {
+    display: block;
+    color: white;
+    position: static;
+}
+  
+.dark #switchButton #moon {
+    display: none;
+}
+
+.dark .navbar input {
+    border: 1px solid transparent;
+}
+
+.dark .offer {
+    background-color: #404040;
+    color: white !important;
+}
+
+.dark input {
+    background-color: #404040;
+}
+
+.dark .food {
+    background-color: #404040;
+    color: white !important;
+}
+
+.dark .menu {
+    background-color: #404040;
+    color: white !important;
+}
+
+.dark .icons .bg{
+    background-color: #404040;
+}
+
+.dark .subcribe input {
+    border: 1px solid transparent;
 }
 
 header nav a {
@@ -316,16 +380,40 @@ footer #Email {
 }
 
 footer .subcribe .button button {
-    background-color: orangered;
+    background-color: #FF6600;
     border: 1px solid transparent;
     transition: all 0.5s;
-    padding: 10px 145px;
+    padding: 10px 133px;
 }
 
 footer .subcribe .button:hover{
     opacity: 0.9;
 }
 /* END FOOTER */
+
+/* BACK TO TOP */
+.backtotop {
+    width: 50px;
+    height: 50px;
+    background-color: #FF6600;
+    position: fixed;
+    right: 23px;
+    bottom: 50px;
+    transition: all 0.5s;
+    opacity: 0;
+    pointer-events: none;
+}
+
+.backtotop.active {
+    bottom: 32px;
+    opacity: 1;
+    pointer-events: auto;
+}
+
+.backtotop a {
+    color: white;
+}
+/* END BACK TO TOP */
 
 /* COPYRIGHT */
 .copyright {
