--- a/css/style.css
+++ b/css/style.css
@@ -396,19 +396,19 @@ footer .subcribe .button:hover{
     width: 50px;
     height: 50px;
     background-color: #FF6600;
-    position: fixed;
+    position: sticky;
     right: 23px;
     bottom: 50px;
     transition: all 0.5s;
-    opacity: 0;
-    pointer-events: none;
+    /* opacity: 1; */
+    /* pointer-events: none; */
 }
 
-.backtotop.active {
+/* .backtotop.active {
     bottom: 32px;
     opacity: 1;
     pointer-events: auto;
-}
+} */
 
 .backtotop a {
     color: white;
