--- a/css/element_style.css
+++ b/css/element_style.css
@@ -255,5 +255,140 @@ main .jumbotron__bg .jumbotron .btn:hover {
     opacity: 0.8;
 }
 
+/* BUTTON */
+main .buttons .buttons__bg {
+    padding: 40px;
+}
 
+main .buttons .buttons__bg button:first-child {
+    background-color: #FF6600;
+    border: 1px solid transparent;
+    transition: all 0.5s;
+}
+
+main .buttons .buttons__bg button:first-child:focus {
+    background-color: #FF6600;
+    border-color: 2px solid #FF6600;
+    box-shadow: 0 0 0 0.2rem rgba(143, 114, 215, 0.5);
+}
+
+main .buttons .buttons__bg button:nth-child(2) {
+    background-color: #f8b195;
+    color: #212529;
+    border: 1px solid transparent;
+    transition: all 0.5s;
+}
+
+main .buttons .buttons__bg button:nth-child(2):focus {
+    color: #212529;
+    background-color: #f8b195;
+    border-color: 2px solid #f58e65;
+    box-shadow: 0 0 0 0.2rem rgba(216, 156, 133, 0.5)
+}
+
+main .buttons .buttons__bg button:nth-child(3) {
+    color: #fff;
+    background-color: #28a745;
+    border-color: #28a745;;
+    transition: all 0.5s;
+}
+
+main .buttons .buttons__bg button:nth-child(3):focus {
+    color: #fff;
+    background-color: #28a745;
+    border-color: #28a745;
+    box-shadow: 0 0 0 0.2rem rgba(72, 180, 97, 0.5);
+}
+
+main .buttons .buttons__bg button:nth-child(4) {
+    color: #fff;
+    background-color: #dc3545;
+    border-color: #dc3545;
+    transition: all 0.5s;
+}
+
+main .buttons .buttons__bg button:nth-child(4):focus {
+    color: #fff;
+    background-color: #dc3545;
+    border-color: #dc3545;
+    box-shadow: 0 0 0 0.2rem rgba(225, 83, 97, 0.5);
+}
+
+main .buttons .buttons__bg button:nth-child(5) {
+    color: #212529;
+    background-color: #ffc107;
+    border-color: #ffc107;
+    transition: all 0.5s;
+}
+
+main .buttons .buttons__bg button:nth-child(5):focus {
+    color: #212529;
+    background-color: #ffc107;
+    border-color: #ffc107;
+    box-shadow: 0 0 0 0.2rem rgba(222, 170, 12, 0.5);
+}
+
+main .buttons .buttons__bg button:nth-child(6) {
+    color: #212529;
+    background-color: #17a2b8;
+    border-color: #17a2b8;
+    transition: all 0.5s;
+}
+
+main .buttons .buttons__bg button:nth-child(6):focus {
+    color: #212529;
+    background-color: #17a2b8;
+    border-color: #17a2b8;
+    box-shadow: 0 0 0 0.2rem rgba(58, 176, 195, 0.5);
+}
+
+main .buttons .buttons__bg button:nth-child(7) {
+    color: #212529;
+    background-color: #f8f9fa;
+    border-color: #f8f9fa;
+    transition: all 0.5s;
+}
+
+main .buttons .buttons__bg button:nth-child(7):focus {
+    color: #212529;
+    background-color: #f8f9fa;
+    border-color: #f8f9fa;
+    box-shadow: 0 0 0 0.2rem rgba(216, 217, 219, 0.5);
+}
+
+main .buttons .buttons__bg button:nth-child(8) {
+    color: #fff;
+    background-color: #343a40;
+    border-color: #343a40;
+    transition: all 0.5s;
+}
+
+main .buttons .buttons__bg button:nth-child(8):focus {
+    color: #fff;
+    background-color: #343a40;
+    border-color: #343a40;
+    box-shadow: 0 0 0 0.2rem rgba(82, 88, 93, 0.5);
+}
+
+main .buttons .buttons__bg button:last-child {
+    color: #fff;
+    background-color: #343a40;
+    border-color: #343a40;
+    transition: all 0.5s;
+}
+
+main .buttons .buttons__bg button:last-child{
+    color: #FF6600;
+    background-color: white;
+    border: none;
+    text-decoration: none;
+    transition: all 0.5s;
+}
+
+main .buttons .buttons__bg button:last-child:focus {
+    border: 1px solid black;
+    text-decoration: underline;
+    box-shadow: none;
+}
+/* END BUTTON */
 /* END OVERVIEW */
