--- a/css/element_style.css
+++ b/css/element_style.css
@@ -584,9 +584,14 @@ main .justify .p-2 {
 /* END JUSTIFY CONTENT */
 
 /* BADGES */
-main .badge {
+main .badges {
     padding: 30px;
     width: 100%;
+}
+
+main .badges .badge__bg span {
+    color: black;
+    background-color: #f8b195;;
 }
 
 
